--- a/parts/add.ejs
+++ b/parts/add.ejs
@@ -17,13 +17,16 @@
                 <input class="form-control" type="text" name="company" value="" placeholder="Campony Name ">
               </div>
             </div>
-            <div class="form-group">
-                <select class="form-control" name="category">
-                <option selected >Select Category</option>
-                <option name="Panel">Panel</option>
-                <option name="">dummy</option>
-                <option name="">dummy</option>
-                </select>
+            <div class="row">
+              <div class=" form-group col-md-6"><input class="form-control" type="number" name="stock" value="" placeholder="Stock ?" ></div>
+              <div class=" col-md-6 form-group">
+                  <select class="form-control" name="category">
+                  <option selected >Select Category</option>
+                  <option name="Panel">Panel</option>
+                  <option name="">Roof Top</option>
+                  <option name="">Battery Charger</option>
+                  </select>
+              </div>
             </div>
             <div class="form-group">
                 <textarea form="newP" rows="5" cols="5" class="form-control" name="description" value="" placeholder="Give Description..."></textarea> 
