--- a/parts/login.ejs
+++ b/parts/login.ejs
@@ -1,10 +1,11 @@
 <!-- this is model for login -->
 <div class="modal fade" id="login" role="dialog">
   <div class="modal-dialog">
+    
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"> Login </h4>
+        <h4 style="text-align:center" class="modal-title"><b>Login</b></h4>
       </div>
       <div class="modal-body ">
         <div class="form-group">
@@ -17,7 +18,7 @@
               <input class="form-control" type="password" name="password" placeholder=" Enter Password">
             </div>
             <div class="form-group">
-              <input class="form-control btn btn-default" type="submit" name="submit" value="submit">
+              <input class="form-control btn btn-success" type="submit" name="submit" value="submit">
             </div>
           </form>
 
