--- a/views/products.ejs
+++ b/views/products.ejs
@@ -22,7 +22,7 @@
                         <div class="caption">
                             <h4><b><%=Product.title %></b></h4>
                             <p><b> Rs.<%= Product.prize %> </b> </p>
-                            <p><%=Product.description%>...<a href="/products/<%= Product._id %>">Read more...</a> </p>
+                            <p><%=Product.description.slice(0,10) %>...<a href="/products/<%= Product._id %>">Read more...</a> </p>
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                         <div class="caption">
                             <h4><b><%=Product.title %></b></h4>
                             <p><b> Rs.<%= Product.prize %> </b> </p>
-                            <p><%=Product.description%>...<a href="/products/<%= Product._id %>">Read more...</a> </p>
+                            <p><%=Product.description.slice(0,10) %>...<a href="/products/<%= Product._id %>">Read more...</a> </p>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                         <div class="caption">
                             <h4> <b><%=Product.title %></b>
                             </h4><p><b> Rs. <%= Product.prize %></b></p>
-                            <p><%=Product.description%>... <a href="/products/<%= Product._id %>">Read more...</a></p>
+                            <p><%=Product.description.slice(0,10) %>... <a href="/products/<%= Product._id %>">Read more...</a></p>
                         </div>
                     </div>
                 </div>
