--- a/parts/edit.ejs
+++ b/parts/edit.ejs
@@ -11,18 +11,18 @@
           <form id="newP" action="/products/<%=solarProduct._id %>?_method=PUT" method="POST" encType="multipart/form-data">
             <div class="row">
               <div class="form-group col-md-6">
-                <input class="form-control" type="text" name="title" value="<%= solarProduct.title %>" autofocus>
+                <input class="form-control" type="text" name="title" value="<%= solarProduct.title %>" autofocus required>
               </div>
               <div class="form-group col-md-6">
-                <input class="form-control" type="text" name="company" value="<%=solarProduct.company %>" >
+                <input class="form-control" type="text" name="company" value="<%=solarProduct.company %>" required>
               </div>
             </div>
             <div class="row">
               <div class=" form-group col-md-6">
-                <input class="form-control" type="number" name="stock" value="<%=solarProduct.stock %>" placeholder="Stock ?">
+                <input class="form-control" type="number" name="stock" value="<%=solarProduct.stock %>" placeholder="Stock ?" required>
               </div>
               <div class="form-group col-md-6">
-                <select class="form-control" name="category">
+                <select class="form-control" name="category" required>
                   <option selected>
                     <%=solarProduct.category %>
                   </option>
@@ -34,18 +34,18 @@
             </div>
             
             <div class="form-group">
-                <textarea form="newP" rows="5" cols="5" class="form-control" name="description" value=""><%=solarProduct.description %></textarea> 
+                <textarea form="newP" rows="5" cols="5" class="form-control" name="description" value="" required><%=solarProduct.description %></textarea> 
             </div>
             <div class="row">
               <div class="form-group col-md-6">
                 <div class="input-group">
                     <div class="input-group-addon">Ru.</div>
-                        <input class="form-control" type="number" name="prize" value="<%=solarProduct.prize %>">
+                        <input class="form-control" type="number" name="prize" value="<%=solarProduct.prize %>" required>
                     <div class="input-group-addon">.00</div>
                 </div>
               </div>
               <div class="form-group col-md-6">
-                <input class="form-control" type="text" name="warranty" value="<%=solarProduct.warranty %>" >
+                <input class="form-control" type="text" name="warranty" value="<%=solarProduct.warranty %>" required>
               </div>
             </div>
             <div class="form-group">
