--- a/parts/login.ejs
+++ b/parts/login.ejs
@@ -12,10 +12,10 @@
 
           <form class="form-inline" action="/login" method="POST">
             <div class="form-group">
-              <input class="form-control" type="email" name="username"  placeholder="Enter your User Name" autofocus>
+              <input class="form-control" type="email" name="username"  placeholder="Enter your User Name" autofocus required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" name="password" placeholder=" Enter Password">
+              <input class="form-control" type="password" name="password" placeholder=" Enter Password" required>
             </div>
             <div class="form-group">
               <input class="form-control btn btn-success" type="submit" name="submit" value="submit">
