--- a/parts/add.ejs
+++ b/parts/add.ejs
@@ -11,14 +11,14 @@
           <form id="newP" action="/products" method="POST" encType="multipart/form-data">
             <div class="row">
               <div class="form-group col-md-6">
-                <input class="form-control" type="text" name="title" value="" placeholder="Product Name" autofocus>
+                <input class="form-control" type="text" name="title" value="" placeholder="Product Name" autofocus required>
               </div>
               <div class="form-group col-md-6">
-                <input class="form-control" type="text" name="company" value="" placeholder="Campony Name ">
+                <input class="form-control" type="text" name="company" value="" placeholder="Campony Name " required>
               </div>
             </div>
             <div class="row">
-              <div class=" form-group col-md-6"><input class="form-control" type="number" name="stock" value="" placeholder="Stock ?" ></div>
+              <div class=" form-group col-md-6"><input class="form-control" type="number" name="stock" value="" placeholder="Stock ?" required></div>
               <div class=" col-md-6 form-group">
                   <select class="form-control" name="category">
                   <option selected >Select Category</option>
@@ -29,18 +29,18 @@
               </div>
             </div>
             <div class="form-group">
-                <textarea form="newP" rows="5" cols="5" class="form-control" name="description" value="" placeholder="Give Description..."></textarea> 
+                <textarea form="newP" rows="5" cols="5" class="form-control" name="description" value="" placeholder="Give Description..." required></textarea> 
             </div>
             <div class="row">
               <div class="form-group col-md-6">
                 <div class="input-group">
                     <div class="input-group-addon">Ru.</div>
-                        <input class="form-control" type="number" name="prize" value="" placeholder="Tell a prize ">
+                        <input class="form-control" type="number" name="prize" value="" placeholder="Tell a prize " required>
                     <div class="input-group-addon">.00</div>
                 </div>
               </div>
               <div class="form-group col-md-6">
-                <input class="form-control" type="text" name="warranty" value="" placeholder="Specify Warranty">
+                <input class="form-control" type="text" name="warranty" value="" placeholder="Specify Warranty" required>
               </div>
             </div>
             <div class="form-group">
