--- a/parts/signup.ejs
+++ b/parts/signup.ejs
@@ -14,7 +14,7 @@
               <input class="form-control" type="email" name="username" value="" placeholder=" Email Address" autofocus required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" name="password" value="" placeholder=" Password" required>
+              <input class="form-control" type="password" name="password" value="" placeholder=" Password" min="5" max="10" required>
             </div>
             <div class="row">
               <div class="form-group col-xs-6">
@@ -26,7 +26,7 @@
             </div>
             <div class="row">
               <div class="form-group col-xs-6">
-                <input class="form-control" type="number" name="mobile" value="" placeholder=" Mobile Number" required>
+                <input class="form-control" type="number" name="mobile" value="" placeholder=" Mobile Number" pattern="" required>
               </div>
               <div class="form-group col-xs-6">
                 <input class="form-control" type="date" name="dob" value="" required>
@@ -37,8 +37,8 @@
             </div>
             <div class="row">
               <div style="color:gray; padding-top:10px;" class="col-md-6 form-group">
-                  Male :  <input class="" type="radio" name="gender" value="male">
-                  Female :  <input class="" type="radio" name="gender" value="male">                
+                  Male :  <input class="" type="radio" name="gender" value="Male" checked>
+                  Female :  <input class="" type="radio" name="gender" value="Female">                
               </div>
               <div style="padding-top:10px" class="col-md-3">
                 <p>Select Profile Pic : </p>
